--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "multer": "^2.0.0",
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
+    "python-shell": "^5.0.0",
     "rate-limit-redis": "^4.2.0",
     "winston": "^3.17.0"
   }
